Mit Colab erstellt

--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -363,11 +363,11 @@
         "print(prior)\n"
       ],
       "metadata": {
-        "id": "AYguhiQMm_PR",
-        "outputId": "f7612fd1-e820-4e68-d651-7c779575a49f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AYguhiQMm_PR",
+        "outputId": "f7612fd1-e820-4e68-d651-7c779575a49f"
       },
       "execution_count": 3,
       "outputs": [
@@ -408,11 +408,11 @@
       "execution_count": null,
       "metadata": {
         "id": "7Hqi7hA1KEGi",
-        "outputId": "a729d610-3011-4e39-d5b8-ab27fa3442c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "a729d610-3011-4e39-d5b8-ab27fa3442c5"
       },
       "outputs": [
         {
@@ -743,6 +743,18 @@
       "source": [
         "***Advanced**: Print out 1) The third element of **listy**, and 2) The element of **dicty** relating to Giant"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(listy[2])\n",
+        "print(dicty[4])"
+      ],
+      "metadata": {
+        "id": "LWU9WCpeoEQP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
