--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -31,18 +31,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S1siXLpdInDM",
-        "outputId": "c68e6da9-a815-4eb7-d1e3-c0b04a3742f4"
+        "outputId": "0cc186d1-9160-43dc-bd44-eb66f8267edc"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "4\n"
           ]
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "wbEBXSjyInDS"
       },
@@ -132,6 +132,9 @@
       },
       "source": [
         "Note that each command is on a new line; other than that, the *syntax* of Python should be fairly clear. We're setting these variables equal to the letters and numbers and phrases and booleans. **What's a boolean?**\n",
+        "\n",
+        "**ANS: result can only be one of 2 outcomes, eg. true or false**\n",
+        "\n",
         "\n",
         "The value of this is we now have values tied to these variables - so every time we want to use it, we can refer to the variable:"
       ]
@@ -222,6 +225,15 @@
       "source": [
         "***Advanced**: where do **classes** fit into this noun/verb picture of variables and commands?*"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ANS: class is a thing that holds data and performs actions ie. \"nouns with verbs\" ie. data as attributes (noun), functions as methods (verb; what it can do)**"
+      ],
+      "metadata": {
+        "id": "fhJ5-hAmrDLH"
+      }
     },
     {
       "cell_type": "markdown",
@@ -334,6 +346,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**ANS:"
+      ],
+      "metadata": {
+        "id": "Wj6yfxuEtR6O"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "8Y6m2F8pInDy"
       },
@@ -354,22 +375,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "name = \"Lina\"\n",
-        "python = 8\n",
-        "prior = True\n",
-        "print(name)\n",
-        "print(python)\n",
-        "print(prior)\n"
-      ],
+      "execution_count": 5,
       "metadata": {
+        "id": "VdjbUdczJyqr",
+        "outputId": "3892e648-5183-4d2d-d346-72749aea9911",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "AYguhiQMm_PR",
-        "outputId": "f7612fd1-e820-4e68-d651-7c779575a49f"
+        }
       },
-      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,16 +393,15 @@
             "True\n"
           ]
         }
+      ],
+      "source": [
+        "name = \"Lina\"\n",
+        "python = 8\n",
+        "prior = True\n",
+        "print(name)\n",
+        "print(python)\n",
+        "print(prior)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "VdjbUdczJyqr"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -407,209 +419,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "7Hqi7hA1KEGi",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 38
-        },
-        "outputId": "a729d610-3011-4e39-d5b8-ab27fa3442c5"
+        "id": "7Hqi7hA1KEGi"
       },
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "     <input type=\"file\" id=\"files-014ed9b4-fc42-473e-bb32-a4ddf8971aa9\" name=\"files[]\" multiple disabled\n",
-              "        style=\"border:none\" />\n",
-              "     <output id=\"result-014ed9b4-fc42-473e-bb32-a4ddf8971aa9\">\n",
-              "      Upload widget is only available when the cell has been executed in the\n",
-              "      current browser session. Please rerun this cell to enable.\n",
-              "      </output>\n",
-              "      <script>// Copyright 2017 Google LLC\n",
-              "//\n",
-              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-              "// you may not use this file except in compliance with the License.\n",
-              "// You may obtain a copy of the License at\n",
-              "//\n",
-              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
-              "//\n",
-              "// Unless required by applicable law or agreed to in writing, software\n",
-              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-              "// See the License for the specific language governing permissions and\n",
-              "// limitations under the License.\n",
-              "\n",
-              "/**\n",
-              " * @fileoverview Helpers for google.colab Python module.\n",
-              " */\n",
-              "(function(scope) {\n",
-              "function span(text, styleAttributes = {}) {\n",
-              "  const element = document.createElement('span');\n",
-              "  element.textContent = text;\n",
-              "  for (const key of Object.keys(styleAttributes)) {\n",
-              "    element.style[key] = styleAttributes[key];\n",
-              "  }\n",
-              "  return element;\n",
-              "}\n",
-              "\n",
-              "// Max number of bytes which will be uploaded at a time.\n",
-              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
-              "\n",
-              "function _uploadFiles(inputId, outputId) {\n",
-              "  const steps = uploadFilesStep(inputId, outputId);\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  // Cache steps on the outputElement to make it available for the next call\n",
-              "  // to uploadFilesContinue from Python.\n",
-              "  outputElement.steps = steps;\n",
-              "\n",
-              "  return _uploadFilesContinue(outputId);\n",
-              "}\n",
-              "\n",
-              "// This is roughly an async generator (not supported in the browser yet),\n",
-              "// where there are multiple asynchronous steps and the Python side is going\n",
-              "// to poll for completion of each step.\n",
-              "// This uses a Promise to block the python side on completion of each step,\n",
-              "// then passes the result of the previous step as the input to the next step.\n",
-              "function _uploadFilesContinue(outputId) {\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  const steps = outputElement.steps;\n",
-              "\n",
-              "  const next = steps.next(outputElement.lastPromiseValue);\n",
-              "  return Promise.resolve(next.value.promise).then((value) => {\n",
-              "    // Cache the last promise value to make it available to the next\n",
-              "    // step of the generator.\n",
-              "    outputElement.lastPromiseValue = value;\n",
-              "    return next.value.response;\n",
-              "  });\n",
-              "}\n",
-              "\n",
-              "/**\n",
-              " * Generator function which is called between each async step of the upload\n",
-              " * process.\n",
-              " * @param {string} inputId Element ID of the input file picker element.\n",
-              " * @param {string} outputId Element ID of the output display.\n",
-              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
-              " */\n",
-              "function* uploadFilesStep(inputId, outputId) {\n",
-              "  const inputElement = document.getElementById(inputId);\n",
-              "  inputElement.disabled = false;\n",
-              "\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  outputElement.innerHTML = '';\n",
-              "\n",
-              "  const pickedPromise = new Promise((resolve) => {\n",
-              "    inputElement.addEventListener('change', (e) => {\n",
-              "      resolve(e.target.files);\n",
-              "    });\n",
-              "  });\n",
-              "\n",
-              "  const cancel = document.createElement('button');\n",
-              "  inputElement.parentElement.appendChild(cancel);\n",
-              "  cancel.textContent = 'Cancel upload';\n",
-              "  const cancelPromise = new Promise((resolve) => {\n",
-              "    cancel.onclick = () => {\n",
-              "      resolve(null);\n",
-              "    };\n",
-              "  });\n",
-              "\n",
-              "  // Wait for the user to pick the files.\n",
-              "  const files = yield {\n",
-              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
-              "    response: {\n",
-              "      action: 'starting',\n",
-              "    }\n",
-              "  };\n",
-              "\n",
-              "  cancel.remove();\n",
-              "\n",
-              "  // Disable the input element since further picks are not allowed.\n",
-              "  inputElement.disabled = true;\n",
-              "\n",
-              "  if (!files) {\n",
-              "    return {\n",
-              "      response: {\n",
-              "        action: 'complete',\n",
-              "      }\n",
-              "    };\n",
-              "  }\n",
-              "\n",
-              "  for (const file of files) {\n",
-              "    const li = document.createElement('li');\n",
-              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
-              "    li.append(span(\n",
-              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
-              "        `last modified: ${\n",
-              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
-              "                                    'n/a'} - `));\n",
-              "    const percent = span('0% done');\n",
-              "    li.appendChild(percent);\n",
-              "\n",
-              "    outputElement.appendChild(li);\n",
-              "\n",
-              "    const fileDataPromise = new Promise((resolve) => {\n",
-              "      const reader = new FileReader();\n",
-              "      reader.onload = (e) => {\n",
-              "        resolve(e.target.result);\n",
-              "      };\n",
-              "      reader.readAsArrayBuffer(file);\n",
-              "    });\n",
-              "    // Wait for the data to be ready.\n",
-              "    let fileData = yield {\n",
-              "      promise: fileDataPromise,\n",
-              "      response: {\n",
-              "        action: 'continue',\n",
-              "      }\n",
-              "    };\n",
-              "\n",
-              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
-              "    let position = 0;\n",
-              "    do {\n",
-              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
-              "      const chunk = new Uint8Array(fileData, position, length);\n",
-              "      position += length;\n",
-              "\n",
-              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
-              "      yield {\n",
-              "        response: {\n",
-              "          action: 'append',\n",
-              "          file: file.name,\n",
-              "          data: base64,\n",
-              "        },\n",
-              "      };\n",
-              "\n",
-              "      let percentDone = fileData.byteLength === 0 ?\n",
-              "          100 :\n",
-              "          Math.round((position / fileData.byteLength) * 100);\n",
-              "      percent.textContent = `${percentDone}% done`;\n",
-              "\n",
-              "    } while (position < fileData.byteLength);\n",
-              "  }\n",
-              "\n",
-              "  // All done.\n",
-              "  yield {\n",
-              "    response: {\n",
-              "      action: 'complete',\n",
-              "    }\n",
-              "  };\n",
-              "}\n",
-              "\n",
-              "scope.google = scope.google || {};\n",
-              "scope.google.colab = scope.google.colab || {};\n",
-              "scope.google.colab._files = {\n",
-              "  _uploadFiles,\n",
-              "  _uploadFilesContinue,\n",
-              "};\n",
-              "})(self);\n",
-              "</script> "
-            ]
-          },
-          "metadata": {}
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import files\n",
         "uploaded = files.upload()"
@@ -681,11 +493,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "xNJEZ5g1InD6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xNJEZ5g1InD6",
+        "outputId": "02c27953-e801-45ab-bee5-4a55a9d15885"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 6, 9]\n"
+          ]
+        }
+      ],
       "source": [
         "listy = [1,2,3,6,9]\n",
         "print(listy)"
@@ -702,18 +526,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "McspnzcDInD_",
-        "outputId": "3762e43a-66fe-473d-c808-20fcf407179e"
+        "outputId": "62fe6204-c1db-49ca-b5b2-e453cfb3d1d1"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "{'Bob': 1.2, 'Mike': 1.2, 'Coop': 1.1, 'Maddy': 1.3, 'Giant': 2.1}\n"
           ]
@@ -746,33 +570,49 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "q7iWJ5X9InED",
+        "outputId": "8dde253a-5b87-4b08-cc6d-322ed957d137",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
       "source": [
-        "print(listy[2])\n",
-        "print(dicty[4])"
+        "print(listy[2])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(dicty['Giant'])"
       ],
       "metadata": {
-        "id": "LWU9WCpeoEQP"
+        "id": "cykGfnOVqQJe",
+        "outputId": "e4e6dc8a-ccd6-40d4-8719-7aa100dbc648",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "QEW9Yl0Vn61t"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "q7iWJ5X9InED"
-      },
-      "outputs": [],
-      "source": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
