Mit Colab erstellt

--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -913,14 +913,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 54,
       "metadata": {
         "id": "KkAOHZN-0Ocd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 411
         },
-        "outputId": "56911240-64d6-4679-8431-1be85a4bf99c"
+        "outputId": "f9a40ff8-10d3-493e-fa3b-d2e530b0fae3"
       },
       "outputs": [
         {
@@ -929,73 +929,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  105k  100  105k    0     0  1027k      0 --:--:-- --:--:-- --:--:-- 1035k\n",
-            "                                       track_name              artist(s)_name  \\\n",
-            "0                                'Till I Collapse           Eminem, Nate Dogg   \n",
-            "14                           A Veces (feat. Feid)          Feid, Paulo Londra   \n",
-            "18   AMERICA HAS A PROBLEM (feat. Kendrick Lamar)  Kendrick Lamar, BeyoncÃ¯Â¿   \n",
-            "27                                 Afraid To Feel                   LF System   \n",
-            "31                                         Agosto                   Bad Bunny   \n",
-            "..                                            ...                         ...   \n",
-            "928                                      fukumean                       Gunna   \n",
-            "929                                   golden hour                        JVKE   \n",
-            "938                   pushin P (feat. Young Thug)   Young Thug, Future, Gunna   \n",
-            "942                         thought i was playing            21 Savage, Gunna   \n",
-            "950                      Ã½Ã½Ã½Ã½Ã½Ã½Ã½Ã½Ã½Ã½Ã½Ã½                     YOASOBI   \n",
-            "\n",
-            "     artist_count  released_year  released_month  released_day  \\\n",
-            "0               2           2002               5            26   \n",
-            "14              2           2022              11             3   \n",
-            "18              2           2023               5            19   \n",
-            "27              1           2022               5             2   \n",
-            "31              1           2022               5             6   \n",
-            "..            ...            ...             ...           ...   \n",
-            "928             1           2023               5            15   \n",
-            "929             1           2022               7            15   \n",
-            "938             3           2022               1             7   \n",
-            "942             2           2022               1             7   \n",
-            "950             1           2023               4            12   \n",
-            "\n",
-            "     in_spotify_playlists  in_spotify_charts         bpm  in_apple_playlists  \\\n",
-            "0                   22923                  0  1695712020                  78   \n",
-            "14                    573                  0    73513683                   2   \n",
-            "18                    896                  0    57089066                  34   \n",
-            "27                   5898                  5   244790012                 129   \n",
-            "31                    897                  0   246127838                   6   \n",
-            "..                    ...                ...         ...                 ...   \n",
-            "928                  1096                 83    95217315                  60   \n",
-            "929                  4511                 36   751134527                  70   \n",
-            "938                  3517                  0   311395144                  54   \n",
-            "942                   807                  0    60680939                   3   \n",
-            "950                   356                 16   143573775                  35   \n",
-            "\n",
-            "     ...  streams key   mode danceability_%  valence_% energy_%  \\\n",
-            "0    ...      171  C#  Major             55         10       85   \n",
-            "14   ...       92  C#  Major             80         81       67   \n",
-            "18   ...      126  C#  Major             78         20       70   \n",
-            "27   ...      128  C#  Major             58         68       91   \n",
-            "31   ...      115  C#  Minor             85         72       58   \n",
-            "..   ...      ...  ..    ...            ...        ...      ...   \n",
-            "928  ...      130  C#  Minor             85         22       62   \n",
-            "929  ...       94  C#  Minor             51         14       59   \n",
-            "938  ...       78  C#  Minor             77         49       42   \n",
-            "942  ...      148  C#  Major             68         29       73   \n",
-            "950  ...      166  C#  Major             57         84       94   \n",
-            "\n",
-            "    acousticness_%  instrumentalness_%  liveness_%  speechiness_%  \n",
-            "0                7                   0           8             20  \n",
-            "14               4                   0           8              6  \n",
-            "18               1                   0          16              4  \n",
-            "27               2                   0          27             11  \n",
-            "31               9                   0          49             12  \n",
-            "..             ...                 ...         ...            ...  \n",
-            "928             12                   0          28              9  \n",
-            "929             65                  18          25              3  \n",
-            "938              1                   1          13             19  \n",
-            "942              0                   0           7              7  \n",
-            "950             11                   0          37              9  \n",
-            "\n",
-            "[120 rows x 24 columns]\n"
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  105k  100  105k    0     0   701k      0 --:--:-- --:--:-- --:--:--  704k\n"
           ]
         },
         {
@@ -1041,7 +975,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9f5350ef-de6f-4a47-aa31-f82d7a3bba90\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-765756b8-064f-47c1-b08a-8bb00eb9313e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1211,7 +1145,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9f5350ef-de6f-4a47-aa31-f82d7a3bba90')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-765756b8-064f-47c1-b08a-8bb00eb9313e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1263,12 +1197,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9f5350ef-de6f-4a47-aa31-f82d7a3bba90 button.colab-df-convert');\n",
+              "        document.querySelector('#df-765756b8-064f-47c1-b08a-8bb00eb9313e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9f5350ef-de6f-4a47-aa31-f82d7a3bba90');\n",
+              "        const element = document.querySelector('#df-765756b8-064f-47c1-b08a-8bb00eb9313e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1288,8 +1222,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6f5d1942-039d-4048-9318-37529dad46da\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6f5d1942-039d-4048-9318-37529dad46da')\"\n",
+              "<div id=\"df-80e9afb9-9c3f-4f68-962c-8b9781375e31\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-80e9afb9-9c3f-4f68-962c-8b9781375e31')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1408,7 +1342,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6f5d1942-039d-4048-9318-37529dad46da button');\n",
+              "        document.querySelector('#df-80e9afb9-9c3f-4f68-962c-8b9781375e31 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1423,7 +1357,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 54
         }
       ],
       "source": [
@@ -1442,9 +1376,9 @@
         "#column names 'streams' and 'bpm' are switched\n",
         "\n",
         "#3. filter dataset for C sharp songs\n",
-        "df = pandas.read_csv('./data/wk1/ASSESSEDQ1.csv') #dataset into dataframe\n",
+        "df = data #dataset into dataframe\n",
         "filtered_df = df[df['key']=='C#']\n",
-        "print(filtered_df)\n",
+        "\n",
         "\n",
         "#4. sort dataframe in descending order of streams - since strems are labelled as 'bpm', sort by 'bpm'\n",
         "filtered_df.sort_values(by='bpm', ascending=False).head()\n"
