Mit Colab erstellt

--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -913,14 +913,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 55,
       "metadata": {
         "id": "KkAOHZN-0Ocd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
         },
-        "outputId": "f9a40ff8-10d3-493e-fa3b-d2e530b0fae3"
+        "outputId": "b61ca645-a35d-4e25-f27f-09d9cdcd78ee"
       },
       "outputs": [
         {
@@ -929,7 +929,7 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  105k  100  105k    0     0   701k      0 --:--:-- --:--:-- --:--:--  704k\n"
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  105k  100  105k    0     0  1049k      0 --:--:-- --:--:-- --:--:-- 1056k\n"
           ]
         },
         {
@@ -950,32 +950,32 @@
               "569           2016               4             4                 43257   \n",
               "670           2021               7             9                 17050   \n",
               "\n",
-              "     in_spotify_charts         bpm  in_apple_playlists  ...  streams key  \\\n",
-              "101                 69  3703895074                 672  ...      171  C#   \n",
-              "701                 10  3562543890                  33  ...       96  C#   \n",
-              "731                 53  2887241814                 440  ...      110  C#   \n",
-              "569                 24  2713922350                 433  ...      104  C#   \n",
-              "670                 36  2665343922                 492  ...      170  C#   \n",
+              "     in_spotify_charts  bpm  in_apple_playlists  ...     streams key   mode  \\\n",
+              "101                 69  171                 672  ...  3703895074  C#  Major   \n",
+              "701                 10   96                  33  ...  3562543890  C#  Minor   \n",
+              "731                 53  110                 440  ...  2887241814  C#  Major   \n",
+              "569                 24  104                 433  ...  2713922350  C#  Major   \n",
+              "670                 36  170                 492  ...  2665343922  C#  Major   \n",
               "\n",
-              "      mode danceability_%  valence_% energy_% acousticness_%  \\\n",
-              "101  Major             50         38       80              0   \n",
-              "701  Minor             83         93       65             58   \n",
-              "731  Major             50         45       41             75   \n",
-              "569  Major             77         36       63              1   \n",
-              "670  Major             59         48       76              4   \n",
+              "    danceability_%  valence_% energy_% acousticness_%  instrumentalness_%  \\\n",
+              "101             50         38       80              0                   0   \n",
+              "701             83         93       65             58                   0   \n",
+              "731             50         45       41             75                   0   \n",
+              "569             77         36       63              1                   0   \n",
+              "670             59         48       76              4                   0   \n",
               "\n",
-              "     instrumentalness_%  liveness_%  speechiness_%  \n",
-              "101                   0           9              7  \n",
-              "701                   0           9              8  \n",
-              "731                   0          11              3  \n",
-              "569                   0          36              5  \n",
-              "670                   0          10              5  \n",
+              "     liveness_%  speechiness_%  \n",
+              "101           9              7  \n",
+              "701           9              8  \n",
+              "731          11              3  \n",
+              "569          36              5  \n",
+              "670          10              5  \n",
               "\n",
               "[5 rows x 24 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-765756b8-064f-47c1-b08a-8bb00eb9313e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cfe4a0c6-a7be-42a4-8482-c362077ee30e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1028,10 +1028,10 @@
               "      <td>29</td>\n",
               "      <td>43899</td>\n",
               "      <td>69</td>\n",
-              "      <td>3703895074</td>\n",
+              "      <td>171</td>\n",
               "      <td>672</td>\n",
               "      <td>...</td>\n",
-              "      <td>171</td>\n",
+              "      <td>3703895074</td>\n",
               "      <td>C#</td>\n",
               "      <td>Major</td>\n",
               "      <td>50</td>\n",
@@ -1052,10 +1052,10 @@
               "      <td>6</td>\n",
               "      <td>32181</td>\n",
               "      <td>10</td>\n",
-              "      <td>3562543890</td>\n",
+              "      <td>96</td>\n",
               "      <td>33</td>\n",
               "      <td>...</td>\n",
-              "      <td>96</td>\n",
+              "      <td>3562543890</td>\n",
               "      <td>C#</td>\n",
               "      <td>Minor</td>\n",
               "      <td>83</td>\n",
@@ -1076,10 +1076,10 @@
               "      <td>8</td>\n",
               "      <td>17836</td>\n",
               "      <td>53</td>\n",
-              "      <td>2887241814</td>\n",
+              "      <td>110</td>\n",
               "      <td>440</td>\n",
               "      <td>...</td>\n",
-              "      <td>110</td>\n",
+              "      <td>2887241814</td>\n",
               "      <td>C#</td>\n",
               "      <td>Major</td>\n",
               "      <td>50</td>\n",
@@ -1100,10 +1100,10 @@
               "      <td>4</td>\n",
               "      <td>43257</td>\n",
               "      <td>24</td>\n",
-              "      <td>2713922350</td>\n",
+              "      <td>104</td>\n",
               "      <td>433</td>\n",
               "      <td>...</td>\n",
-              "      <td>104</td>\n",
+              "      <td>2713922350</td>\n",
               "      <td>C#</td>\n",
               "      <td>Major</td>\n",
               "      <td>77</td>\n",
@@ -1124,10 +1124,10 @@
               "      <td>9</td>\n",
               "      <td>17050</td>\n",
               "      <td>36</td>\n",
-              "      <td>2665343922</td>\n",
+              "      <td>170</td>\n",
               "      <td>492</td>\n",
               "      <td>...</td>\n",
-              "      <td>170</td>\n",
+              "      <td>2665343922</td>\n",
               "      <td>C#</td>\n",
               "      <td>Major</td>\n",
               "      <td>59</td>\n",
@@ -1145,7 +1145,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-765756b8-064f-47c1-b08a-8bb00eb9313e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cfe4a0c6-a7be-42a4-8482-c362077ee30e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1197,12 +1197,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-765756b8-064f-47c1-b08a-8bb00eb9313e button.colab-df-convert');\n",
+              "        document.querySelector('#df-cfe4a0c6-a7be-42a4-8482-c362077ee30e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-765756b8-064f-47c1-b08a-8bb00eb9313e');\n",
+              "        const element = document.querySelector('#df-cfe4a0c6-a7be-42a4-8482-c362077ee30e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1222,8 +1222,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-80e9afb9-9c3f-4f68-962c-8b9781375e31\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-80e9afb9-9c3f-4f68-962c-8b9781375e31')\"\n",
+              "<div id=\"df-35f7b995-c337-46e0-ad00-c6afa6e19a67\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-35f7b995-c337-46e0-ad00-c6afa6e19a67')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1342,7 +1342,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-80e9afb9-9c3f-4f68-962c-8b9781375e31 button');\n",
+              "        document.querySelector('#df-35f7b995-c337-46e0-ad00-c6afa6e19a67 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1357,7 +1357,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 55
         }
       ],
       "source": [
@@ -1373,15 +1373,15 @@
         "data = pandas.read_csv('./data/wk1/ASSESSEDQ1.csv')\n",
         "data.head() #show first few values\n",
         "\n",
-        "#column names 'streams' and 'bpm' are switched\n",
+        "#column names 'streams' and 'bpm' are switched: swap\n",
+        "data[['streams','bpm']]=data[['bpm', 'streams']]\n",
         "\n",
         "#3. filter dataset for C sharp songs\n",
         "df = data #dataset into dataframe\n",
         "filtered_df = df[df['key']=='C#']\n",
         "\n",
-        "\n",
-        "#4. sort dataframe in descending order of streams - since strems are labelled as 'bpm', sort by 'bpm'\n",
-        "filtered_df.sort_values(by='bpm', ascending=False).head()\n"
+        "#4. sort dataframe in descending order of streams\n",
+        "filtered_df.sort_values(by='streams', ascending=False).head()\n"
       ]
     },
     {
