Mit Colab erstellt

--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -60,7 +60,7 @@
       "execution_count": null,
       "metadata": {
         "id": "cWXVYQmlOgk7",
-        "outputId": "c39240e1-7006-4e0c-f5d1-a4ece576b1db"
+        "outputId": "df2c2d62-7fcb-4484-9c11-2ea0b36eb4d3"
       },
       "outputs": [
         {
@@ -80,7 +80,7 @@
       "execution_count": null,
       "metadata": {
         "id": "cSISKOHUOglB",
-        "outputId": "07241de9-01ba-4d34-9651-4aac47b867c0"
+        "outputId": "95645ddd-a317-46b9-9613-5f9929dbfe1d"
       },
       "outputs": [
         {
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "5cBMkYbaOglG"
       },
@@ -131,7 +131,7 @@
       "execution_count": null,
       "metadata": {
         "id": "GD2qMhAxOglK",
-        "outputId": "3b60725b-28e2-4b93-ee6c-4cb4796f9d7c"
+        "outputId": "a1d52baf-fbf8-45d2-ef4b-fad0faa67ced"
       },
       "outputs": [
         {
@@ -403,7 +403,7 @@
       "execution_count": null,
       "metadata": {
         "id": "SqAN20onOglN",
-        "outputId": "38dd2b8c-cba8-4240-ce4f-ffe1381bce9a"
+        "outputId": "4d64b13b-75af-44b9-a255-a8c1a085745c"
       },
       "outputs": [
         {
@@ -670,7 +670,7 @@
       "execution_count": null,
       "metadata": {
         "id": "amopH87LOglQ",
-        "outputId": "f44cd2c4-ce9b-4a1d-eb88-59824a4268b0"
+        "outputId": "3c4eb23f-6685-4a90-d24e-5e0e004aff44"
       },
       "outputs": [
         {
@@ -717,7 +717,7 @@
       "execution_count": null,
       "metadata": {
         "id": "VJDvuHzvOglU",
-        "outputId": "021f5be3-b624-4efd-97e1-817d0d418aed"
+        "outputId": "48bfe909-8cea-4720-ea5d-2d3e7e56c90b"
       },
       "outputs": [
         {
@@ -1015,7 +1015,7 @@
       "execution_count": null,
       "metadata": {
         "id": "D9tXjsnGOglW",
-        "outputId": "f0dc939b-f8e3-40be-b09b-7a367d846e4e"
+        "outputId": "a91ca4d0-e078-403f-ee22-78c439d79e5a"
       },
       "outputs": [
         {
@@ -1059,7 +1059,7 @@
       "execution_count": null,
       "metadata": {
         "id": "3e7BrLoCOglZ",
-        "outputId": "a2489af5-7182-4261-c44b-85718e655f81"
+        "outputId": "afc332c7-ab9a-4ad2-8005-38db0c3c5753"
       },
       "outputs": [
         {
@@ -1091,7 +1091,7 @@
       "execution_count": null,
       "metadata": {
         "id": "R7Ix_HYPOglc",
-        "outputId": "27e89226-615e-4efd-8dc2-66dfae7c3565"
+        "outputId": "d2b10368-af5b-4878-c082-bfa469eef256"
       },
       "outputs": [
         {
@@ -1152,7 +1152,7 @@
       "execution_count": null,
       "metadata": {
         "id": "PYBoACruOglg",
-        "outputId": "60bffeaf-0917-42f4-b5bc-16765984d42d"
+        "outputId": "7f05faed-ae54-41a1-b543-5f5134739c74"
       },
       "outputs": [
         {
@@ -1198,6 +1198,45 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "data_path = \"./data/wk2/incomes.csv\"\n",
+        "income =  pandas.read_csv(data_path, index_col=0)\n",
+        "a = income['Childless couple, annual income'].loc[1]\n",
+        "aa = income['Single adult'].loc[1]\n",
+        "b = income['Childless couple, annual income'].loc[50]\n",
+        "bb = income['Single adult'].loc[50]\n",
+        "c = income['Childless couple, annual income'].loc[99]\n",
+        "cc = income['Single adult'].loc[99]\n",
+        "\n",
+        "print(a, aa)\n",
+        "print(b, bb)\n",
+        "print(c, cc)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gozPQ1MsAK1v",
+        "outputId": "299a6820-6273-416e-f04c-d3f5d8088361",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1,746.92 1,170.44\n",
+            "21,832.75 14,627.95\n",
+            "108,990.74 73,023.80\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ajwfDhieOgll"
@@ -1229,7 +1268,7 @@
       "execution_count": null,
       "metadata": {
         "id": "y5CBXm8HOgln",
-        "outputId": "ddb7017b-7bac-4fa2-86c0-5dd7da2f4e48"
+        "outputId": "2930996c-396d-42d6-dfa1-35c10bd049d6"
       },
       "outputs": [
         {
@@ -1309,7 +1348,7 @@
       "execution_count": null,
       "metadata": {
         "id": "WTfrHUP6Oglr",
-        "outputId": "888ead90-89ea-4396-e85f-91e60fc72661"
+        "outputId": "6674d555-9ea9-4d98-db99-70ba9314ec6b"
       },
       "outputs": [
         {
@@ -1368,7 +1407,7 @@
       "execution_count": null,
       "metadata": {
         "id": "fLWfyIclOglu",
-        "outputId": "dbf0237d-61d0-4aef-b8d9-fb8cde381599"
+        "outputId": "fcc6ce8d-f697-4f50-9496-8ce6dc3a4424"
       },
       "outputs": [
         {
@@ -1415,7 +1454,7 @@
       "execution_count": null,
       "metadata": {
         "id": "lzCSbkcKOglx",
-        "outputId": "14065e9a-5b36-4241-d869-f2fbef888446"
+        "outputId": "e0750591-dc2f-42c1-a484-69ff4b7d0f60"
       },
       "outputs": [
         {
@@ -1512,7 +1551,7 @@
       "execution_count": null,
       "metadata": {
         "id": "8YAEBL4aOgl0",
-        "outputId": "79b62f5d-8472-48e8-b4d1-b5d93f7bb3da"
+        "outputId": "2cf2c221-4788-43f1-a556-bef4db87c78b"
       },
       "outputs": [
         {
@@ -1646,7 +1685,7 @@
       "execution_count": null,
       "metadata": {
         "id": "GPSVukHaOgl3",
-        "outputId": "4dbe822f-f71f-499b-dff7-ab55bd595d77"
+        "outputId": "3b3be7ef-e85b-432f-e8f1-9d20238cd8e9"
       },
       "outputs": [
         {
@@ -1812,7 +1851,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-lvKTGpQ_Tog"
+        "id": "C3IsfBiH_kwM"
       },
       "source": [
         "# Extension: Web Scraping\n",
@@ -1828,8 +1867,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RLAJgWFm_Tog",
-        "outputId": "54618b12-24fe-408b-c63a-a5fd8d29abd9"
+        "id": "rDFUgjBY_kwM",
+        "outputId": "7d70502c-fee1-497c-bfda-68117ca8ad6a"
       },
       "outputs": [
         {
@@ -1919,7 +1958,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qZKrPaau_Tog"
+        "id": "XWYc_WDx_kwM"
       },
       "source": [
         "When we print the results of what was scraped, it's pretty ugly. One of the reasons is that the `tables` variable is actually a *list* of dataframes. Because there were two tables on our website, `read_html` has returned both of those tables and put them in a list. let's save the first table as a new dataframe called `top10` and have a closer look."
@@ -1929,7 +1968,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OWYujlqe_Tog"
+        "id": "dUIUZAsA_kwN"
       },
       "outputs": [],
       "source": [
@@ -1940,7 +1979,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "h2kD8ziJ_Toh"
+        "id": "0ls4MB3R_kwN"
       },
       "source": [
         "This looks more like the dataframes we were looking at earlier. There's a big chunk of text (this is HTML code, the language websites are built with) where the name of the second column should be. `read_html` is usually pretty smart, and can actually read the column names from the tables on the website. It seems to have gotten confused for this one column. If we print the columns from the  We can rename that column using the `rename` function. Since we know it's the second column, we can select it with `top10.columns[1]`"
@@ -1950,7 +1989,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "95cxM8qB_Toh"
+        "id": "uAcZ7gg9_kwN"
       },
       "outputs": [],
       "source": [
@@ -1961,7 +2000,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CXV6BYbr_Toh"
+        "id": "viUztr2n_kwN"
       },
       "source": [
         "And there we have it; a nicely formatted dataframe ready for analysis, straight from a website."
@@ -1970,7 +2009,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hi9A84Nq_Toh"
+        "id": "kTK4b14E_kwN"
       },
       "source": [
         "\n",
@@ -1983,7 +2022,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RTZXbDsL_Toh"
+        "id": "WPH9FvM5_kwO"
       },
       "outputs": [],
       "source": [
@@ -1995,7 +2034,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vLLDKMAe_Toi"
+        "id": "e9qj1-QF_kwO"
       },
       "source": [
         "I'll help you out with this next bit. We'll be using the `groupby` function in pandas to group our dataframe such that each row is a country (rather than a person, as it currently is). We do this by using `<dataframe>.groupby('<column name>')`. Since we're aggregating, we need to tell python how we want it to aggregate our values. In this case, we just want to count the number of rows for each country; we can do this using `.size()`. You can use many different aggregation functions, e.g. `.mean()` if you wanted to calculate the average of a specific column."
@@ -2005,7 +2044,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CH4sBoHJ_Toi"
+        "id": "1kEYXXgG_kwO"
       },
       "outputs": [],
       "source": [
@@ -2019,7 +2058,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lky1VE18_Toi"
+        "id": "_GuA3AMn_kwO"
       },
       "source": [
         "*QUESTION: What country has the sixth most nobel prizes in chemistry?*"
