Mit Colab erstellt

--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -1211,19 +1211,16 @@
         "\n",
         "print(a, aa)\n",
         "print(b, bb)\n",
-        "print(c, cc)\n",
-        "\n",
-        "\n",
-        "\n"
+        "print(c, cc)\n"
       ],
       "metadata": {
-        "id": "gozPQ1MsAK1v",
-        "outputId": "299a6820-6273-416e-f04c-d3f5d8088361",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gozPQ1MsAK1v",
+        "outputId": "2617fe3b-a065-4e8e-cad4-7267b3bbfd7b"
       },
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,6 +1232,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ANS: annual income of childless couples is higher in all 3 percentiles, but individidual incomeis lower if split equally amongst both couples. Hence individuals without a partner make more money.**"
+      ],
+      "metadata": {
+        "id": "jx5HTCnoG8wM"
+      }
     },
     {
       "cell_type": "markdown",
