Mit Colab erstellt

--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -1202,33 +1202,30 @@
       "source": [
         "data_path = \"./data/wk2/incomes.csv\"\n",
         "income =  pandas.read_csv(data_path, index_col=0)\n",
-        "a = income['Childless couple, annual income'].loc[1]\n",
-        "aa = income['Single adult'].loc[1]\n",
-        "b = income['Childless couple, annual income'].loc[50]\n",
-        "bb = income['Single adult'].loc[50]\n",
-        "c = income['Childless couple, annual income'].loc[99]\n",
-        "cc = income['Single adult'].loc[99]\n",
+        "a = income['Childless couple, annual income'].loc[1], income['Single adult'].loc[1]\n",
+        "b = income['Childless couple, annual income'].loc[50], income['Single adult'].loc[50]\n",
+        "c = income['Childless couple, annual income'].loc[99], income['Single adult'].loc[99]\n",
         "\n",
-        "print(a, aa)\n",
-        "print(b, bb)\n",
-        "print(c, cc)\n"
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gozPQ1MsAK1v",
-        "outputId": "2617fe3b-a065-4e8e-cad4-7267b3bbfd7b"
+        "outputId": "05e722e4-91c9-460e-ab4f-19bda226b6ef"
       },
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1,746.92 1,170.44\n",
-            "21,832.75 14,627.95\n",
-            "108,990.74 73,023.80\n"
+            "('1,746.92', '1,170.44')\n",
+            "('21,832.75', '14,627.95')\n",
+            "('108,990.74', '73,023.80')\n"
           ]
         }
       ]
