--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -1485,7 +1485,7 @@
         "id": "y5CBXm8HOgln",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 549
+          "height": 740
         },
         "outputId": "6402340c-caf4-4d01-d788-571089c48501"
       },
@@ -1565,7 +1565,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 743
+          "height": 723
         },
         "id": "GhoHol3E7fPA",
         "outputId": "c7d1d6fc-0189-4a6d-cea6-1ebff35594ea"
@@ -2006,7 +2006,7 @@
         "id": "hGlvHC7iOgl5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 760
+          "height": 740
         },
         "outputId": "6de37882-238a-4f6c-acd4-2e54994bb774"
       },
@@ -2159,12 +2159,12 @@
         "clean.plot()\n"
       ],
       "metadata": {
-        "id": "AhBZv0h7DAkP",
-        "outputId": "ba5dcdd2-a7f8-4363-b4a9-fab8487b60c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 539
-        }
+          "height": 722
+        },
+        "id": "AhBZv0h7DAkP",
+        "outputId": "ba5dcdd2-a7f8-4363-b4a9-fab8487b60c3"
       },
       "execution_count": 22,
       "outputs": [
@@ -2192,14 +2192,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 34,
       "metadata": {
         "id": "Bg_cvi27OgmE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
         },
-        "outputId": "88b2d3aa-e59b-4843-cb45-87af7b9ac7eb"
+        "outputId": "defb9a36-ae88-4508-a0ff-d93348013dc9"
       },
       "outputs": [
         {
@@ -2216,7 +2216,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1c2cfc5d-4ac7-4d5d-885f-1097241fc434\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-849438fa-eea9-4655-b97b-0abd97387927\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2269,7 +2269,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c2cfc5d-4ac7-4d5d-885f-1097241fc434')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-849438fa-eea9-4655-b97b-0abd97387927')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2321,12 +2321,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1c2cfc5d-4ac7-4d5d-885f-1097241fc434 button.colab-df-convert');\n",
+              "        document.querySelector('#df-849438fa-eea9-4655-b97b-0abd97387927 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1c2cfc5d-4ac7-4d5d-885f-1097241fc434');\n",
+              "        const element = document.querySelector('#df-849438fa-eea9-4655-b97b-0abd97387927');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2346,8 +2346,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-da46877c-fff5-47e5-bcd4-702d57e5d9a9\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-da46877c-fff5-47e5-bcd4-702d57e5d9a9')\"\n",
+              "<div id=\"df-4a35ce4a-9295-4308-b087-3cbcd9430491\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4a35ce4a-9295-4308-b087-3cbcd9430491')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2466,7 +2466,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-da46877c-fff5-47e5-bcd4-702d57e5d9a9 button');\n",
+              "        document.querySelector('#df-4a35ce4a-9295-4308-b087-3cbcd9430491 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2477,11 +2477,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"Percentile Point\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1,\n        \"min\": 95,\n        \"max\": 99,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          96,\n          99,\n          97\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Single adult\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 14100.714884370227,\n        \"min\": 37579.34,\n        \"max\": 73023.8,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          41028.91,\n          73023.8,\n          45509.8\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"clean3\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"Percentile Point\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1,\n        \"min\": 95,\n        \"max\": 99,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          96,\n          99,\n          97\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Single adult\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 14100.714884370227,\n        \"min\": 37579.34,\n        \"max\": 73023.8,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          41028.91,\n          73023.8,\n          45509.8\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 34
         }
       ],
       "source": [
@@ -2493,12 +2493,21 @@
         "clean3 = income[['Single adult']]\n",
         "clean3 = clean3.replace(',', '', regex=True)\n",
         "clean3 = clean3.replace('-', 'NaN', regex=True).astype('float')\n",
+        "clean3[clean3['Single adult'] <= 10000]\n",
         "\n",
-        "df = pd.DataFrame(clean3)\n",
-        "filtered_data = df[(df['Single adult'] <= 10000)]\n",
+        "clean3.tail()\n",
         "\n",
-        "df.tail()\n"
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**WHY**"
+      ],
+      "metadata": {
+        "id": "AgnRIKw7FjvH"
+      }
     },
     {
       "cell_type": "markdown",
