Mit Colab erstellt

--- a/notebooks/W05. Distributions and Basic Statistics.ipynb
+++ b/notebooks/W05. Distributions and Basic Statistics.ipynb
@@ -2152,7 +2152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 1,
       "metadata": {
         "id": "VbD6bQpHT7FD"
       },
@@ -2290,6 +2290,22 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**ANS:**\n",
+        "\n",
+        "**1. Women's mean is much lower, and sd (spread) shows that they don't overlap at all**\n",
+        "\n",
+        "**2. statistically unlikely to draw a sample of women that have incomes even similar of income random sample men hence close to 0% **\n",
+        "if overlapping confidence intervals --> some chance of women having higher income\n",
+        "\n",
+        "**3. these represent two distinct populations**"
+      ],
+      "metadata": {
+        "id": "iex9lhEGXvEb"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "q4P9QRBmT7FE"
       },
@@ -2299,7 +2315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "aMJTt7sJT7FE"
       },
